<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro">

    <TextView
        android:id="@+id/cym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="111dp"
        android:fontFamily="@font/baloo"
        android:gravity="center_horizontal|top"
        android:layout_centerHorizontal="true"
        android:text="@string/cym"
        android:textAppearance="@style/cym" />

    <TextView
        android:id="@+id/control_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_below="@id/cym"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-60dp"
        android:fontFamily="@font/amita"
        android:text="@string/control_your_money"
        android:textAppearance="@style/control_you" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/devlopped_by_lahcen"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textColor="#938B8B"
        android:fontFamily="@font/amita"/>
</RelativeLayout>